@@ -42,6 +42,7 @@
     use 'guid' text as url - if possible.
 18. Fix copying of covers to UMS, etc, devices if song is transcoded.
 19. Install helper apps to lib64 for 64bit linux builds.
+20. In tag editor, only mark rating as changed if it has been.
 
 1.5.1
 -----
